--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "ngrok": "ngrok http 8765"
   },
   "dependencies": {
     "botbuilder-adapter-slack": "^1.0.11",
